Fix container flickering

--- a/assets/scss/components/_layout.scss
+++ b/assets/scss/components/_layout.scss
@@ -3,6 +3,7 @@
 }
 
 .container {
+    width: 100%;
     max-width: 1240px;
     margin-left: auto;
     margin-right: auto;
